// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`rewriteMasterPlaylistUrls should rewrite 1`] = `
{
  "variants": [
    {
      "audio": [
        {
          "groupId": "group_1",
          "name": "audio_1",
          "type": "AUDIO",
          "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIwODBkMWIxMDBjNWExNDQxMGE1Yg%3D%3D&type=AUDIO",
        },
      ],
      "bandwidth": 1000,
      "subtitles": [
        {
          "groupId": "group_1",
          "name": "subtitles_1",
          "type": "SUBTITLES",
          "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIwNDBkMTkxZDE2MGExNTFkMTI0ZDEyNDcxYzRh&type=SUBTITLES",
        },
      ],
      "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIxMzAxMWIwYzBjNWExNDQxMGE1Yg%3D%3D",
    },
  ],
}
`;

exports[`rewriteMasterPlaylistUrls should include session id 1`] = `
{
  "variants": [
    {
      "audio": [
        {
          "groupId": "group_1",
          "name": "audio_1",
          "type": "AUDIO",
          "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIwODBkMWIxMDBjNWExNDQxMGE1Yg%3D%3D&sid=36bab417-0952-4c23-bdf0-9a424e4651ad&type=AUDIO",
        },
      ],
      "bandwidth": 1000,
      "subtitles": [
        {
          "groupId": "group_1",
          "name": "subtitles_1",
          "type": "SUBTITLES",
          "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIwNDBkMTkxZDE2MGExNTFkMTI0ZDEyNDcxYzRh&sid=36bab417-0952-4c23-bdf0-9a424e4651ad&type=SUBTITLES",
        },
      ],
      "uri": "stitcher-endpoint/out/playlist.m3u8?eurl=MDcxZDFiMTA1OTVkNWExNDBjMTkxNjVjMTgwYTEyNWIxMzAxMWIwYzBjNWExNDQxMGE1Yg%3D%3D&sid=36bab417-0952-4c23-bdf0-9a424e4651ad",
    },
  ],
}
`;

exports[`rewriteMediaPlaylistUrls should rewrite relative segments 1`] = `
{
  "dateRanges": [],
  "endlist": true,
  "segments": [
    {
      "duration": 2,
      "map": {
        "uri": "https://mock.com/init.mp4",
      },
      "uri": "https://mock.com/seg1.mp4",
    },
    {
      "duration": 1.5,
      "uri": "https://mock.com/seg2.mp4",
    },
  ],
  "targetDuration": 2,
}
`;

exports[`rewriteMediaPlaylistUrls should rewrite absolute segments 1`] = `
{
  "dateRanges": [],
  "endlist": true,
  "segments": [
    {
      "duration": 2,
      "map": {
        "uri": "https://mock-absolute.com/video_1/init.mp4",
      },
      "uri": "https://mock-absolute.com/video_1/seg1.mp4",
    },
  ],
  "targetDuration": 2,
}
`;

exports[`mapAdBreaksToSessionInterstitials should handle time based with vastUrl 1`] = `
[
  {
    "dateTime": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 5,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950325250,
      "weekData": null,
    },
    "vast": {
      "data": undefined,
      "url": "http://mock.com/vast_1.xml",
    },
  },
  {
    "dateTime": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 20,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950340250,
      "weekData": null,
    },
    "vast": {
      "data": undefined,
      "url": "http://mock.com/vast_2.xml",
    },
  },
  {
    "dateTime": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 30,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950350250,
      "weekData": null,
    },
    "vast": {
      "data": undefined,
      "url": "http://mock.com/vast_3.xml",
    },
  },
]
`;

exports[`mapAdBreaksToSessionInterstitials should handle vastData 1`] = `
[
  {
    "dateTime": DateTime {
      "_zone": SystemZone {},
      "c": {
        "day": 2,
        "hour": 10,
        "millisecond": 250,
        "minute": 12,
        "month": 5,
        "second": 15,
        "year": 2021,
      },
      "invalid": null,
      "isLuxonDateTime": true,
      "loc": Locale {
        "eraCache": {},
        "fastNumbersCached": null,
        "intl": "en-US",
        "locale": "en-US",
        "meridiemCache": null,
        "monthsCache": {
          "format": {},
          "standalone": {},
        },
        "numberingSystem": null,
        "outputCalendar": null,
        "specifiedLocale": null,
        "weekSettings": null,
        "weekdaysCache": {
          "format": {},
          "standalone": {},
        },
      },
      "localWeekData": null,
      "o": -0,
      "ts": 1619950335250,
      "weekData": null,
    },
    "vast": {
      "data": "<CDATA>mocked VAST data</CDATA>",
      "url": undefined,
    },
  },
]
`;
